--- a/.github/workflows/run-python-scripts.yml
+++ b/.github/workflows/run-python-scripts.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        # Add any other dependencies if needed
+        pip install -r requirements.txt
 
     - name: Check for lock file
       id: check-lock
