--- a/.github/workflows/run-python-scripts.yml
+++ b/.github/workflows/run-python-scripts.yml
@@ -55,7 +55,16 @@ jobs:
         git commit -m 'Add output files'
         git push
       env:
-        GITHUB_TOKEN: ${{ secrets.AUTH_TATAPLAY_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.- name: Commit and push changes
+  run: |
+    git config --global user.name 'Mujahidul Islam'
+    git config --global user.email 'mdshawn0898@gmail.com'
+    git add .
+    git commit -m 'Add output files'
+    git push
+  env:
+    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+ }}
 
     - name: Remove lock file
       if: success()
